--- a/src/assets/scss/_listing.scss
+++ b/src/assets/scss/_listing.scss
@@ -36,94 +36,94 @@ tr:last-child{
 }
 }
 
-.listing-app__type-facebook{
-    background: rgba($facebook-color,0.2);
-    color: $facebook-color;
-    border-radius: 15px;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
+// .listing-app__type-facebook{
+//     background: rgba($facebook-color,0.2);
+//     color: $facebook-color;
+//     border-radius: 15px;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
 
-}
-.listing-app__type-youtube{
-    background: rgba($youtube-color,0.2);
-    color: $youtube-color;
-    border-radius: 15px;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-}
-.listing-app__type-linkedin{
-    background: rgba($linkedin-color,0.2);
-    color: $linkedin-color;
-    border-radius: 15px;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-}
-.listing-app__type-twitter{
-    background: rgba($twitter-color,0.2);
-    color: $twitter-color;
-    border-radius: 15px;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-}
-.listing-app__type-instagram{
-    background: rgba($instagram-color,0.2);
-    color: $instagram-color;
-    border-radius: 15px;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-}
+// }
+// .listing-app__type-youtube{
+//     background: rgba($youtube-color,0.2);
+//     color: $youtube-color;
+//     border-radius: 15px;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+// }
+// .listing-app__type-linkedin{
+//     background: rgba($linkedin-color,0.2);
+//     color: $linkedin-color;
+//     border-radius: 15px;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+// }
+// .listing-app__type-twitter{
+//     background: rgba($twitter-color,0.2);
+//     color: $twitter-color;
+//     border-radius: 15px;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+// }
+// .listing-app__type-instagram{
+//     background: rgba($instagram-color,0.2);
+//     color: $instagram-color;
+//     border-radius: 15px;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+// }
 
 
-.listing-app__view-facebook{
-    background: $facebook-color;
-    color: $white-font-color;
-    border-radius: 3rem;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
-.listing-app__view-youtube{
-    background: $youtube-color;
-    color: $white-font-color;
-    border-radius: 3rem;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
-.listing-app__view-linkedin{
-    background: $linkedin-color;
-    color: $white-font-color;
-    border-radius: 3rem;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
-.listing-app__view-twitter{
-    background: $twitter-color;
-    color: $white-font-color;
-    border-radius: 3rem;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
-.listing-app__view-instagram{
-    background: $instagram-color;
-    color: $white-font-color;
-    border-radius: 3rem;
-    padding: 5px 15px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-}
+// .listing-app__view-facebook{
+//     background: $facebook-color;
+//     color: $white-font-color;
+//     border-radius: 3rem;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+//     display: inline-block;
+// }
+// .listing-app__view-youtube{
+//     background: $youtube-color;
+//     color: $white-font-color;
+//     border-radius: 3rem;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+//     display: inline-block;
+// }
+// .listing-app__view-linkedin{
+//     background: $linkedin-color;
+//     color: $white-font-color;
+//     border-radius: 3rem;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+//     display: inline-block;
+// }
+// .listing-app__view-twitter{
+//     background: $twitter-color;
+//     color: $white-font-color;
+//     border-radius: 3rem;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+//     display: inline-block;
+// }
+// .listing-app__view-instagram{
+//     background: $instagram-color;
+//     color: $white-font-color;
+//     border-radius: 3rem;
+//     padding: 5px 15px;
+//     text-decoration: none;
+//     text-align: center;
+//     display: inline-block;
+// }
 
 .row-container {
     background:#F3F6FD
