--- a/src/assets/scss/_searchbox.scss
+++ b/src/assets/scss/_searchbox.scss
@@ -1,12 +1,12 @@
-.header-searchbox{
-    font-size: 14px;
-    line-height: 1.42857143;
-    color:#B8C1C6;
-    background-color:#FBFBFB;
-    border: 1px solid #ACACAC;
-    border-radius: 15px;
-    padding: 6px 6px 6px 30px;
-}
+// .header-searchbox{
+//     font-size: 14px;
+//     line-height: 1.42857143;
+//     color:#B8C1C6;
+//     background-color:#FBFBFB;
+//     border: 1px solid #ACACAC;
+//     border-radius: 15px;
+//     padding: 6px 6px 6px 30px;
+// }
 
 .connection-filter{
     font-size: 14px;
@@ -46,37 +46,37 @@ select {
   
   
   
-      select.round {
-          background-image:
-            linear-gradient(45deg, transparent 50%, #fff 50%),
-            linear-gradient(135deg, #fff 50%, transparent 50%),
-            radial-gradient(#6967FF 70%, transparent 72%);
-          background-position:
-            calc(100% - 20px) calc(1em + 2px),
-            calc(100% - 15px) calc(1em + 2px),
-            calc(100% - .65em) .5em;
-          background-size:
-            5px 5px,
-            5px 5px,
-            1.5em 1.5em;
-          background-repeat: no-repeat;
-        }
-        
-        select.round:focus {
-          background-image:
-            linear-gradient(45deg, white 50%, transparent 50%),
-            linear-gradient(135deg, transparent 50%, white 50%),
-            radial-gradient(#6967FF 70%, transparent 72%);
-          background-position:
-            calc(100% - 15px) 1em,
-            calc(100% - 20px) 1em,
-            calc(100% - .65em) .5em;
-          background-size:
-            5px 5px,
-            5px 5px,
-            1.5em 1.5em;
-          background-repeat: no-repeat;
-          border-color: green;
-          outline: 0;
-        }
+  select.round {
+      background-image:
+        linear-gradient(45deg, transparent 50%, #fff 50%),
+        linear-gradient(135deg, #fff 50%, transparent 50%),
+        radial-gradient(#6967FF 70%, transparent 72%);
+      background-position:
+        calc(100% - 20px) calc(1em + 2px),
+        calc(100% - 15px) calc(1em + 2px),
+        calc(100% - .65em) .5em;
+      background-size:
+        5px 5px,
+        5px 5px,
+        1.5em 1.5em;
+      background-repeat: no-repeat;
+    }
+    
+    select.round:focus {
+      background-image:
+        linear-gradient(45deg, white 50%, transparent 50%),
+        linear-gradient(135deg, transparent 50%, white 50%),
+        radial-gradient(#6967FF 70%, transparent 72%);
+      background-position:
+        calc(100% - 15px) 1em,
+        calc(100% - 20px) 1em,
+        calc(100% - .65em) .5em;
+      background-size:
+        5px 5px,
+        5px 5px,
+        1.5em 1.5em;
+      background-repeat: no-repeat;
+      border-color: green;
+      outline: 0;
+    }
         
